kubernetes/platform/development/forgejo/buildkit/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: buildkit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: buildkit
  enableDefaultDeny:
    ingress: false
  egress:
    - toFQDNs:
        - matchName: registry.vzkn.eu
      toPorts:
        - ports:
            - protocol: TCP
              port: "443"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
      toPorts:
        - ports:
            - protocol: TCP
              port: "443"
